@@ -1,0 +1,9 @@
+0x00300000 ;menukey
+0x00800000 ;cheat toggle
+0x00008040 ;screenshotkey
+0xFFFFC0FF ;color1 1st color
+0xFF030303 ;color1 fade amount
+0xFFCC40CC ;color2 2nd color
+0xFF060006 ;color2 fade amount
+0xFFC080FF ;color3
+0xFF00FFC0 ;color4
