@@ -1,6 +1,8 @@
 #!/bin/bash
 rm *.elf
 rm objects/*.o
-cp *.prx MKIJIRO/mkultra.prx
-cp *.prx /media/disk/seplugins/mkultra.prx
+cp MKIJIRO.prx MKIJIRO/mkultra_psplink.prx
+cp MKIJIRO.prx /media/disk/seplugins/mkultra_psplink.prx
+cp MKIJIRO_SC.prx MKIJIRO/mkultra.prx
+cp MKIJIRO_SC.prx /media/disk/seplugins/mkultra.prx
 rm *.prx
